--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alex Stevens Bio Page</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <h1 id="Main_Bio">Alex Stevens Bio Page</h1>
+        <div>
+            
+        </div>
+    </body>
 </html>
