--- a/index.html
+++ b/index.html
@@ -3,12 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Week 2">
+        <meta name="author" content="Alex Stevens">
     <title>Alex Stevens Bio Page</title>
 </head>
+<!--Styling-->
+<style>
+    body{
+        background-color: aquamarine;
+    }
+    h1{
+        border: 5px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 5px;
+        border-radius: 100px;
+        width: 500px;
+        text-align: center;
+        margin: auto;
+    }
+    nav {
+    background-color: #292929;
+    padding: 10px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        padding: 10px 20px;
+        margin-right: 10px;
+        border-radius: 5px;
+        display: inline-block;
+        text-align: center;
+    }
+    nav a:hover {
+        background-color: #555;
+        height: 95%;
+    }
+    #images{
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+        padding: 20px;
+    }
+    #images img{
+        width: 350px;
+        max-width: 100%;
+        height: 400px;
+        border-radius: 8px;
+        margin: 50px;
+    }
+    #aboutme{
+        border: 2px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 2px;
+        border-radius: 100px;
+        width: 1000px;
+        text-align: center;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #link{
+        border: 2px solid black;
+        border-radius: 10px;
+        width: 150px;
+        margin: auto;
+        text-align: center;
+    }
+    #footer {
+        background-color: #292929;
+        padding: 10px;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        text-align: center;
+}
+
+    #footer a {
+        color: #fff;
+        text-decoration: none;
+        padding: 10px 20px;
+        margin-right: 10px;
+        border-radius: 5px;
+        display: inline-block;
+        text-align: center;
+    }
+    #footer a:hover {
+        background-color: #555;
+        height: 95%;
+    }
+</style>
     <body>
-        <h1 id="Main_Bio">Alex Stevens Bio Page</h1>
-        <div>
-            
+        <!--Navigation of Pages-->
+        <nav>
+        <a href="Hobbies.html">Hobbies</a>
+        <a href="Schooling.html">Schooling</a>
+        </nav>
+        <br>
+        <br>
+        <h1><i>Alex Stevens Bio Page</i></h1>
+        <div id="aboutme">
+            <p><u>About Me</u></p>
+            <p>Hello, My name is Alexander Stevens</p>
+            <p>Im Currently in my Second Term studying Cyber Security and Networking</p>
+            <p>I have 2 dogs named Duncan(Lobster) and Cosmo(Shark)</p>
+
+            <p></p>
+        </div>
+        <!--Image Links-->
+        <div id="images">
+            <br>
+            <img src="images/Attachment.jpg" alt="Doggies" width="350px">
+            <img src="images/IMG_5597.jpg" alt="Prom">
+            <br>
+        </div>
+        <div id="link">
+            <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU">Credit Card info</a>            
+        </div>
+        <div id="footer">
+            <a href="#">Back to Top</a>
         </div>
     </body>
 </html>
