--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
         text-align: center;
         margin: auto;
     }
+    h2{
+        border: 5px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 5px;
+        border-radius: 100px;
+        width: 300px;
+        text-align: center;
+        margin: auto;
+    }
+    h3{
+        border: 5px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 5px;
+        border-radius: 100px;
+        width: 300px;
+        text-align: center;
+        margin: auto;
+    }
     nav {
     background-color: #292929;
     padding: 10px;
@@ -28,8 +46,7 @@
     margin-bottom: 20px;
     margin-top: 20px;
     text-align: center;
-}
-
+    }
     nav a {
         color: #fff;
         text-decoration: none;
@@ -42,20 +59,20 @@
     nav a:hover {
         background-color: #555;
         height: 95%;
-    }
-    #images{
+        }
+    #image1{
         text-align: center;
         display: flex;
         justify-content: space-around;
         padding: 20px;
-    }
-    #images img{
+        }
+    #image1 img{
         width: 350px;
         max-width: 100%;
         height: 400px;
         border-radius: 8px;
         margin: 50px;
-    }
+        }
     #aboutme{
         border: 2px solid black;
         font-family: 'Courier New', Courier, monospace;
@@ -66,14 +83,14 @@
         margin-top: 50px;
         margin-left: auto;
         margin-right: auto;
-    }
+        }
     #link{
         border: 2px solid black;
         border-radius: 10px;
         width: 150px;
         margin: auto;
         text-align: center;
-    }
+        }
     #footer {
         background-color: #292929;
         padding: 10px;
@@ -81,8 +98,7 @@
         margin-bottom: 20px;
         margin-top: 20px;
         text-align: center;
-}
-
+        }
     #footer a {
         color: #fff;
         text-decoration: none;
@@ -91,17 +107,66 @@
         border-radius: 5px;
         display: inline-block;
         text-align: center;
-    }
+        }
     #footer a:hover {
         background-color: #555;
         height: 95%;
+        }
+        #info{
+        border: 2px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 2px;
+        border-radius: 100px;
+        width: 1000px;
+        text-align: center;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        }
+    #image2{
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    }
+    #image2 img{
+        width: 350px;
+        max-width: 100%;
+        height: 400px;
+        border-radius: 8px;
+        margin: 50px;
+    }
+    #info2{
+        border: 2px solid black;
+        font-family: 'Courier New', Courier, monospace;
+        border-width: 2px;
+        border-radius: 100px;
+        width: 1000px;
+        text-align: center;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #image3{
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+        padding: 20px;
+    }
+    #image3 img{
+        width: 350px;
+        max-width: 100%;
+        height: 400px;
+        border-radius: 8px;
+        margin: 50px;
     }
 </style>
     <body>
         <!--Navigation of Pages-->
         <nav>
-        <a href="Hobbies.html">Hobbies</a>
-        <a href="Schooling.html">Schooling</a>
+        <a href="#info">Hobbies</a>
+        <a href="#info2">Schooling</a>
+        <a href="#aboutme">Bio</a>
         </nav>
         <br>
         <br>
@@ -115,7 +180,7 @@
             <p></p>
         </div>
         <!--Image Links-->
-        <div id="images">
+        <div id="image1">
             <br>
             <img src="images/Attachment.jpg" alt="Doggies" width="350px">
             <img src="images/IMG_5597.jpg" alt="Prom">
@@ -123,6 +188,43 @@
         </div>
         <div id="link">
             <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU">Credit Card info</a>            
+        </div>
+        <br>
+        <br>
+        <br>
+        <h2>Hobbies</h2>
+        <div id="info">
+            <p><u>Hobbies</u></p>
+            <p>**Computers**</p>
+            <p>**Photography</p>
+            <p>**Boxing**</p>
+            <p>**Video Games**</p>
+            <p>**Traveling**</p>
+        </div>
+        <!--Image Links-->
+        <div id="image2">
+            <br>
+            <img src="images/IMG_4203.jpg" alt="computer" width="350px">
+            <img src="images/IMG_0603.jpg" alt="photo">
+            <img src="images/IMG_5597.jpg" alt="aruba_mountain">
+            <br>
+        </div>
+        <h3>Schooling</h3>
+        <div id="info2">
+            <p><u><strong>Schooling</strong></u></p>
+            <p><strong>Elementry School: Stadium Elementry</strong></p>
+            <p><strong>Middle School: Hugh B. Bain</strong></p>
+            <p><strong>High School: Cranston West</strong></p>
+            <p><strong>CACTC: CyberSecurity & Networking</strong></p>
+            <p></p>
+        </div>
+        <div id="image3">
+            <br>
+            <img src="images/stadium.jpeg" alt="Elementry" width="350px">
+            <img src="images/bain.jpeg" alt="Middleschool">
+            <img src="images/west.jpeg" alt="HighSchool">
+            <img src="images/CareerTech203_4011b_sm.jpg" alt="CACTC">
+            <br>
         </div>
         <div id="footer">
             <a href="#">Back to Top</a>
